# fortress

./: .gitignore  ARTICLE_EN.md  ARTICLE_ZH.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  fortress.yaml  go.mod  go.sum  test_net.ps1
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.semgrep/: c-security.yml  go-security.yml  rust-security.yml
ci/: docker-compose.yml  github-actions.yml  pre-commit
cmd/fortress/: defense_test.go  main.go
configs/: aggressive.yaml
dagger/: e2e_test.go
dagger/builder/: compiler.go  go.mod  main.go  obfuscator.go
dagger/implant/: Cargo.toml
dagger/implant/src/: beacon.rs  crypto.rs  lib.rs  plugin.rs  scorer.rs
dagger/implant/src/evasion/: hw_bp.rs  mod.rs  sleep.rs  stack_spoof.rs  syscall.rs
dagger/implant/src/inject/: early_bird.rs  hollow.rs  mod.rs  reflective.rs  stomp.rs
dagger/implant/src/lateral/: linux.rs  mod.rs  windows.rs
dagger/implant/src/persist/: linux.rs  mod.rs  windows.rs
dagger/implant/src/transport/: dns.rs  https.rs  icmp.rs  mod.rs  smb.rs  websocket.rs
dagger/shared/: crypto.go  crypto_test.go  framing.go  go.mod  session.go  (+3 more)
deployment/: Dockerfile  docker-compose.prod.yml  runbook.md
docs/: DEPLOYMENT.md  HYDRA_PRO_DESIGN.md  RUNBOOK.md  STATUS_REPORT.md  TOMORROW.md  V3.1-VS-V6.md  _config.yml  index.md
fuzz/: bpf_verifier_test.c  parser_fuzz.rs  protocol_fuzz_test.go
muscle/: Cargo.toml
rules/: test.rules
shield/: manager.go  manager_linux.go  manager_stub.go
(+290 files in other folders)
