[package]
name = "dagger-implant"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
x25519-dalek = { version = "2", features = ["static_secrets"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
chacha20poly1305 = "0.10"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
zeroize = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
thiserror = "2"
log = "0.4"
tracing = "0.1"
hex = "0.4"
base64 = "0.22"
getrandom = "0.2"
async-trait = "0.1"
hostname = "0.4"

# Transports
rustls = { version = "0.23", features = ["ring"], default-features = false }
webpki-roots = "0.26"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
hickory-resolver = "0.24"
tungstenite = "0.24"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
url = "2"

# Platform-specific
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Threading", "Win32_System_Memory", "Win32_System_Diagnostics_Debug", "Win32_Security", "Win32_System_SystemServices", "Win32_Foundation", "Win32_System_Console", "Win32_Networking_WinSock", "Win32_System_LibraryLoader"] }
ntapi = "0.4"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"
